--- a/.github/workflows/aiget-action.yml
+++ b/.github/workflows/aiget-action.yml
@@ -1,26 +1,22 @@
-name: AIGeT Auto-Issue Generator 🚀
-
-on: [push, pull_request]
-
 jobs:
-  aiget-job:
+  run:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: 🤖 Run AIGeT Script
+      - name: Run AIGeT Script
         run: python aiget_main.py
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ github.repository }}
+          GITHUB_TOKEN: ${{ secrets.AIGET_GITHUB_TOKEN }}  # Use the new secret token
