--- a/.github/workflows/aiget-action.yml
+++ b/.github/workflows/aiget-action.yml
@@ -1,3 +1,13 @@
+name: AIGeT - Auto Issue Generator
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
   run:
     runs-on: ubuntu-latest
@@ -19,4 +29,4 @@ jobs:
       - name: Run AIGeT Script
         run: python aiget_main.py
         env:
-          GITHUB_TOKEN: ${{ secrets.AIGET_GITHUB_TOKEN }}  # Use the new secret token
+          GITHUB_TOKEN: ${{ secrets.AIGET_GITHUB_TOKEN }}  # Use the custom GitHub token stored as a secret
