--- a/.github/workflows/aiget-action.yml
+++ b/.github/workflows/aiget-action.yml
@@ -13,7 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout coded0nyc0d3rs
+
         uses: actions/checkout@v2
 
       - name: Set up Python
